# log-investigator-rs-k8s-jaeger

./: Cargo.toml  Makefile  README.md  jaeger_traces.json
logs/: logs.txt
src/: jaeger.rs  lib.rs  logs.rs  main.rs  models.rs
